Fixed POTFILES.in to actually use GtkBuilder files, updated Russian translation a bit.

--- a/po/ru.po
+++ b/po/ru.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gnome-color-manager\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-10-30 16:49+0300\n"
+"POT-Creation-Date: 2009-10-30 18:40+0300\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Alexandre Prokoudine <alexandre.prokoudine@gmail.com>\n"
 "Language-Team: GNOME Russian <gnome-cyr@gnome.org>\n"
@@ -11,6 +11,22 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Poedit-Language: Russian\n"
 "X-Poedit-Country: RUSSIAN FEDERATION\n"
+
+#: ../data/gcm-calibrate.ui.h:1
+msgid "<b>Details</b>"
+msgstr "<b>Подробнее</b>"
+
+#: ../data/gcm-calibrate.ui.h:2
+msgid "<big><b>Title</b></big>"
+msgstr ""
+
+#: ../data/gcm-calibrate.ui.h:3
+msgid "Calibration"
+msgstr "Калибровка"
+
+#: ../data/gcm-calibrate.ui.h:4
+msgid "Message"
+msgstr "Сообщение"
 
 #: ../data/gcm-import.desktop.in.h:1
 msgid "ICC Profile Installer"
@@ -22,7 +38,7 @@ msgstr ""
 
 #: ../data/gcm-import.desktop.in.h:3
 msgid "Install ICC profiles"
-msgstr ""
+msgstr "Установить цветовые профили"
 
 #: ../data/gcm-prefs.desktop.in.h:1
 msgid "Color Profiles"
@@ -30,7 +46,47 @@ msgstr "Цветовые профили"
 
 #: ../data/gcm-prefs.desktop.in.h:2
 msgid "Manage ICC color profiles"
-msgstr ""
+msgstr "Управление цветовыми профилями"
+
+#: ../data/gcm-prefs.ui.h:1
+msgid "<b>Color Profile:</b>"
+msgstr "<b>Цветовой профиль:</b>"
+
+#: ../data/gcm-prefs.ui.h:2
+msgid "<b>Fine tuning:</b>"
+msgstr "<b>Уточнение параметров:</b>"
+
+#: ../data/gcm-prefs.ui.h:3
+msgid "Brightness:"
+msgstr "Яркость:"
+
+#: ../data/gcm-prefs.ui.h:4
+msgid "Color management"
+msgstr "Управление цветом"
+
+#: ../data/gcm-prefs.ui.h:5
+msgid "Contrast:"
+msgstr "Контраст:"
+
+#: ../data/gcm-prefs.ui.h:6
+msgid "Description:"
+msgstr "Описание:"
+
+#: ../data/gcm-prefs.ui.h:7
+msgid "Gamma:"
+msgstr "Гамма:"
+
+#: ../data/gcm-prefs.ui.h:8
+msgid "License:"
+msgstr "Лицензия:"
+
+#: ../data/gcm-prefs.ui.h:9
+msgid "_Calibrate"
+msgstr "От_калибровать"
+
+#: ../data/gcm-prefs.ui.h:10
+msgid "_Reset to defaults"
+msgstr "С_бросить"
 
 #: ../data/gnome-color-manager.schemas.in.h:1
 msgid "Gamma is adjusted to affect the color of the attached monitor. Traditionally Linux has used a gamma value of 1.0, but this makes monitors look washed out compared Windows XP or OSX. Apple traditionally used a value of 1.8 for a long time, but now use the same value as Microsoft. Microsoft has always used a value 2.2"
@@ -104,7 +160,7 @@ msgstr ""
 #. setup GUI
 #: ../src/gcm-calibrate.c:414
 msgid "Generating the profile"
-msgstr ""
+msgstr "Создаётся профиль"
 
 #: ../src/gcm-calibrate.c:415
 msgid "Generating the ICC color profile that can be used with this screen."
@@ -134,13 +190,13 @@ msgstr ""
 #. TRANSLATORS: color profile already been installed
 #: ../src/gcm-import.c:161
 msgid "ICC profile already installed"
-msgstr ""
+msgstr "Цветовой профиль уже установлен"
 
 #. TRANSLATORS: message text
 #: ../src/gcm-import.c:173
 #, c-format
 msgid "Import ICC color profile %s?"
-msgstr ""
+msgstr "Импортировать цветовой профиль %s?"
 
 #. TRANSLATORS: message text
 #: ../src/gcm-import.c:176
@@ -150,7 +206,7 @@ msgstr "Импортировать профиль ICC?"
 #. ask confirmation
 #: ../src/gcm-import.c:184
 msgid "Import ICC profile"
-msgstr ""
+msgstr "Импорт цветового профиля"
 
 #. TRANSLATORS: button text
 #: ../src/gcm-import.c:188
