--- a/README
+++ b/README
@@ -4,5 +4,5 @@
 gnome-color-manager is a session program that makes it easy to manage, install
 and generate color profiles in the GNOME desktop.
 
-For more information, please see http://live.gnome.org/GnomeColorManager
+For more information, please see http://projects.gnome.org/gnome-color-manager/
 
