Added Tamil translation

--- a/po/ta.po
+++ b/po/ta.po
@@ -1,11 +1,9 @@
-# translation of gnome-color-manager.master.ta.po to Tamil
-# translation of gnome-color-manager.HEAD.ta.po to
-# translation of gnome-color-manager.HEAD.po to
-# Tamil translation for GNOME gnome-color-manager.
-# Copyright (C) 2009 Project gnome-color-manager.
-# This file is distributed under the same license as the gnome-color-manager package.
-#
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the PACKAGE package.
 # Dr.T.Vasudevan <agnihot3@gmail.com>, 2009.
+#
+#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: gnome-color-manager\n"
@@ -252,5 +250,3 @@ msgstr "இந்த மாடலுக்கு தாய் சாளரம்
 #: ../src/gcm-utils.c:68
 msgid "Internal LCD"
 msgstr "உள்ளமை எல்சிடி "
-
-
