Fixed a typo in README

--- a/README
+++ b/README
@@ -16,7 +16,7 @@ This project has the following features:
   on the file.
 
 * Easy display calibration using an external calibration device, and scanner
-  calibration using a inexpensive IT 8.7 target. For calibration, the ArgylCMS
+  calibration using a inexpensive IT 8.7 target. For calibration, the ArgyllCMS
   package is required.
 
 * Integration X11 by setting the per-screen and per-output _ICC_PROFILE atom,
