Updated Russian translation - fixed declination of months

--- a/po/ru.po
+++ b/po/ru.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: gnome-color-manager\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-12-04 18:14+0300\n"
-"PO-Revision-Date: 2009-12-04 18:25+0300\n"
+"PO-Revision-Date: 2009-12-04 18:29+0300\n"
 "Last-Translator: Alexandre Prokoudine <alexandre.prokoudine@gmail.com>\n"
 "Language-Team: GNOME Russian <gnome-cyr@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -780,62 +780,62 @@ msgstr "Загружается список устройств..."
 #. TRANSLATORS: the month
 #: ../src/gcm-profile.c:637
 msgid "January"
-msgstr "январь"
+msgstr "января"
 
 #. TRANSLATORS: the month
 #: ../src/gcm-profile.c:641
 msgid "February"
-msgstr "февраль"
+msgstr "февраля"
 
 #. TRANSLATORS: the month
 #: ../src/gcm-profile.c:645
 msgid "March"
-msgstr "март"
+msgstr "марта"
 
 #. TRANSLATORS: the month
 #: ../src/gcm-profile.c:649
 msgid "April"
-msgstr "апрель"
+msgstr "апреля"
 
 #. TRANSLATORS: the month
 #: ../src/gcm-profile.c:653
 msgid "May"
-msgstr "май"
+msgstr "мая"
 
 #. TRANSLATORS: the month
 #: ../src/gcm-profile.c:657
 msgid "June"
-msgstr "июнь"
+msgstr "июня"
 
 #. TRANSLATORS: the month
 #: ../src/gcm-profile.c:661
 msgid "July"
-msgstr "июль"
+msgstr "июля"
 
 #. TRANSLATORS: the month
 #: ../src/gcm-profile.c:665
 msgid "August"
-msgstr "август"
+msgstr "августа"
 
 #. TRANSLATORS: the month (my birthday)
 #: ../src/gcm-profile.c:669
 msgid "September"
-msgstr "сентябрь"
+msgstr "сентября"
 
 #. TRANSLATORS: the month
 #: ../src/gcm-profile.c:673
 msgid "October"
-msgstr "октябрь"
+msgstr "октября"
 
 #. TRANSLATORS: the month
 #: ../src/gcm-profile.c:677
 msgid "November"
-msgstr "ноябрь"
+msgstr "ноября"
 
 #. TRANSLATORS: the month
 #: ../src/gcm-profile.c:681
 msgid "December"
-msgstr "декабрь"
+msgstr "декабря"
 
 #. TRANSLATORS: this is where the ICC profile has no description
 #: ../src/gcm-profile.c:967
