Updated UI and help translations, added a screenshot, more to follow

--- a/help/ru/ru.po
+++ b/help/ru/ru.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: GNOME Color Manager\n"
-"POT-Creation-Date: 2009-12-01 19:25+0300\n"
+"POT-Creation-Date: 2009-12-06 13:24+0300\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Alexandre Prokoudine <alexandre.prokoudine@gmail.com>\n"
 "Language-Team: GNOME Russian <gnome-cyr@gnome.org>\n"
@@ -39,80 +39,80 @@ msgstr ""
 #. It doesn't matter what you translate it to: it's not used at all.
 #: gnome-color-manager.xml:163(None)
 msgid "@@image: 'figures/gcm-import.png'; md5=3fb16ccbdd31be0a2c610077ac1d0a5a"
-msgstr ""
+msgstr "@@image: 'figures/gcm-import.png'; md5=3fb16ccbdd31be0a2c610077ac1d0a5a"
 
 #. When image changes, this message will be marked fuzzy or untranslated for you.
 #. It doesn't matter what you translate it to: it's not used at all.
 #: gnome-color-manager.xml:201(None)
-msgid "@@image: 'figures/gcm-basic.png'; md5=e708b40282a601ccdca789938108d6d5"
-msgstr ""
+msgid "@@image: 'figures/gcm-basic.png'; md5=86cc59ab472d11efc5e46b1cd15d5681"
+msgstr "@@image: 'figures/gcm-basic.png'; md5=86cc59ab472d11efc5e46b1cd15d5681"
 
 #. When image changes, this message will be marked fuzzy or untranslated for you.
 #. It doesn't matter what you translate it to: it's not used at all.
 #: gnome-color-manager.xml:215(None)
-msgid "@@image: 'figures/gcm-adjust.png'; md5=25672a6a392cb03b961aa65f841b9a0a"
-msgstr ""
+msgid "@@image: 'figures/gcm-adjust.png'; md5=441e4579c56418fca68b02508004f3d5"
+msgstr "@@image: 'figures/gcm-adjust.png'; md5=441e4579c56418fca68b02508004f3d5"
 
 #. When image changes, this message will be marked fuzzy or untranslated for you.
 #. It doesn't matter what you translate it to: it's not used at all.
 #: gnome-color-manager.xml:239(None)
 msgid "@@image: 'figures/gcm-calibrate-default.png'; md5=21815551aae222d703032db710598b70"
-msgstr ""
+msgstr "@@image: 'figures/gcm-calibrate-default.png'; md5=21815551aae222d703032db710598b70"
 
 #. When image changes, this message will be marked fuzzy or untranslated for you.
 #. It doesn't matter what you translate it to: it's not used at all.
 #: gnome-color-manager.xml:251(None)
 msgid "@@image: 'figures/gcm-calibrate-drawing.png'; md5=8fcee7383b49c1d2fd487f5e9b6beb25"
-msgstr ""
+msgstr "@@image: 'figures/gcm-calibrate-drawing.png'; md5=8fcee7383b49c1d2fd487f5e9b6beb25"
 
 #: gnome-color-manager.xml:25(title)
 msgid "<application>GNOME Color Manager</application> Manual"
-msgstr ""
+msgstr "Руководство по <application>GNOME Color Manager</application>"
 
 #: gnome-color-manager.xml:27(para)
 msgid "<application>GNOME Color Manager</application> is a session program that makes it easy to manage, install and generate color profiles in the GNOME desktop."
-msgstr ""
+msgstr "<application>GNOME Color Manager</application>является сеансовым приложением GNOME для простого управления, установки и создания цветовых профилей."
 
 #: gnome-color-manager.xml:33(year)
 msgid "2009"
-msgstr ""
+msgstr "2009"
 
 #: gnome-color-manager.xml:34(holder)
 msgid "Richard Hughes (richard@hughsie.com)"
-msgstr ""
+msgstr "Richard Hughes (richard@hughsie.com)"
 
 #: gnome-color-manager.xml:50(publishername)
 #: gnome-color-manager.xml:86(para)
 msgid "Richard Hughes"
-msgstr ""
+msgstr "Richard Hughes"
 
 #: gnome-color-manager.xml:60(firstname)
 msgid "Richard"
-msgstr ""
+msgstr "Richard"
 
 #: gnome-color-manager.xml:61(surname)
 msgid "Hughes"
-msgstr ""
+msgstr "Hughes"
 
 #: gnome-color-manager.xml:62(email)
 msgid "richard@hughsie.com"
-msgstr ""
+msgstr "richard@hughsie.com"
 
 #: gnome-color-manager.xml:80(revnumber)
 msgid "2.0"
-msgstr ""
+msgstr "2.0"
 
 #: gnome-color-manager.xml:81(date)
 msgid "2009-11-01"
-msgstr ""
+msgstr "2009-11-01"
 
 #: gnome-color-manager.xml:83(para)
 msgid "Richard Hughes <email>richard@hughsie.com</email>"
-msgstr ""
+msgstr "Richard Hughes <email>richard@hughsie.com</email>"
 
 #: gnome-color-manager.xml:92(title)
 msgid "Feedback"
-msgstr ""
+msgstr "Обратная связь"
 
 #: gnome-color-manager.xml:93(para)
 msgid "To report a bug or make a suggestion regarding the GNOME Color Manager application or this manual, follow the directions in the <ulink url=\"http://projects.gnome.org/gnome-color-manager/bugs.html\" type=\"http\"><application>GNOME Color Manager</application> Contact Page</ulink>."
@@ -121,15 +121,15 @@ msgstr ""
 #: gnome-color-manager.xml:107(primary)
 #: gnome-color-manager.xml:120(tertiary)
 msgid "gnome-color-manager"
-msgstr ""
+msgstr "gnome-color-manager"
 
 #: gnome-color-manager.xml:113(title)
 msgid "Introduction"
-msgstr ""
+msgstr "Введение"
 
 #: gnome-color-manager.xml:119(secondary)
 msgid "Manual"
-msgstr ""
+msgstr "Руководство"
 
 #: gnome-color-manager.xml:123(para)
 msgid "The GNOME Color Manager is a session framework that makes it easy to manage, install and generate color profiles in the <systemitem>GNOME desktop</systemitem>."
