--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 		      GNOME Color Manager
 	       Color profile manager for the GNOME desktop
 
-gnome-color-manager is a session program that makes it easy to manage, install
+gnome-color-manager is a session framework that makes it easy to manage, install
 and generate color profiles in the GNOME desktop.
 
 This project has the following features:
