--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 		      GNOME Color Manager
 	       Color profile manager for the GNOME desktop
 
-gnome-color-manager is a session framework that makes it easy to manage, install
+GNOME Color Manager is a session framework that makes it easy to manage, install
 and generate color profiles in the GNOME desktop.
 
 This project has the following features:
@@ -23,8 +23,8 @@ This project has the following features:
   which makes applications such as the GIMP use a color managed output.
 
 * Easy to use DBus interface for applications to query what ICC profiles should
-  be used for a specific device. This is session activated and is only started
-  when it is needed, and quits after a small period of idleness.
+  be used for a specific device or device type. This is session activated and
+  is only started when it is needed, and quits after a small period of idleness.
 
 For more information, please see http://projects.gnome.org/gnome-color-manager/
 
