--- a/help/de/de.po
+++ b/help/de/de.po
@@ -7,9 +7,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gnome-color-manager master\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-12-25 14:41+0000\n"
-"PO-Revision-Date: 2009-12-26 17:55+0100\n"
-"Last-Translator: Christian Kirbach <Christian.Kirbach@googlemail.com>\n"
+"POT-Creation-Date: 2010-01-01 20:09+0000\n"
+"PO-Revision-Date: 2010-02-04 19:04+0100\n"
+"Last-Translator: Mario Blättermann <mariobl@gnome.org>\n"
 "Language-Team: German <gnome-de@gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -25,18 +25,24 @@ msgstr ""
 #. When image changes, this message will be marked fuzzy or untranslated for you.
 #. It doesn't matter what you translate it to: it's not used at all.
 #: C/gnome-color-manager.xml:201(None)
-msgid "@@image: 'figures/gcm-basic.png'; md5=86cc59ab472d11efc5e46b1cd15d5681"
+msgid "@@image: 'figures/gcm-basic.png'; md5=7196499f4f7ae981ee3aaf60ff939ae9"
 msgstr ""
 
 #. When image changes, this message will be marked fuzzy or untranslated for you.
 #. It doesn't matter what you translate it to: it's not used at all.
 #: C/gnome-color-manager.xml:215(None)
-msgid "@@image: 'figures/gcm-adjust.png'; md5=441e4579c56418fca68b02508004f3d5"
+msgid "@@image: 'figures/gcm-adjust.png'; md5=b024d282f1c2432a396f91c55d169dc5"
 msgstr ""
 
 #. When image changes, this message will be marked fuzzy or untranslated for you.
 #. It doesn't matter what you translate it to: it's not used at all.
-#: C/gnome-color-manager.xml:239(None)
+#: C/gnome-color-manager.xml:232(None)
+msgid "@@image: 'figures/gcm-scanner.png'; md5=510ebd108bdb0ae181df5237afa5ac0f"
+msgstr ""
+
+#. When image changes, this message will be marked fuzzy or untranslated for you.
+#. It doesn't matter what you translate it to: it's not used at all.
+#: C/gnome-color-manager.xml:256(None)
 msgid ""
 "@@image: 'figures/gcm-calibrate-default.png'; "
 "md5=21815551aae222d703032db710598b70"
@@ -44,7 +50,7 @@ msgstr ""
 
 #. When image changes, this message will be marked fuzzy or untranslated for you.
 #. It doesn't matter what you translate it to: it's not used at all.
-#: C/gnome-color-manager.xml:251(None)
+#: C/gnome-color-manager.xml:268(None)
 msgid ""
 "@@image: 'figures/gcm-calibrate-drawing.png'; "
 "md5=8fcee7383b49c1d2fd487f5e9b6beb25"
@@ -83,8 +89,8 @@ msgid ""
 "the terms of the GNU Free Documentation License (GFDL), Version 1.1 or any "
 "later version published by the Free Software Foundation with no Invariant "
 "Sections, no Front-Cover Texts, and no Back-Cover Texts. You can find a copy "
-"of the GFDL at this <ulink type=\"help\" url=\"ghelp:fdl\">link</ulink> or "
-"in the file COPYING-DOCS distributed with this manual."
+"of the GFDL at this <ulink type=\"help\" url=\"ghelp:fdl\">link</ulink> or in "
+"the file COPYING-DOCS distributed with this manual."
 msgstr ""
 "Das vorliegende Dokument kann gemäß den Bedingungen der GNU Free "
 "Documentation License (GFDL), Version 1.1 oder jeder späteren, von der Free "
@@ -115,67 +121,65 @@ msgid ""
 "capital letters."
 msgstr ""
 "Bei vielen der von Firmen zur Unterscheidung ihrer Produkte und "
-"Dienstleistungen verwendeten Namen handelt es sich um Marken. An den "
-"Stellen, an denen derartige Namen in einer GNOME-Dokumentation vorkommen und "
-"wenn die Mitglieder des GNOME-Dokumentationsprojekts über diese Marken "
-"informiert wurden, sind die Namen in Großbuchstaben oder mit großen "
-"Anfangsbuchstaben geschrieben."
+"Dienstleistungen verwendeten Namen handelt es sich um Marken. An den Stellen, "
+"an denen derartige Namen in einer GNOME-Dokumentation vorkommen und wenn die "
+"Mitglieder des GNOME-Dokumentationsprojekts über diese Marken informiert "
+"wurden, sind die Namen in Großbuchstaben oder mit großen Anfangsbuchstaben "
+"geschrieben."
 
 #: C/gnome-color-manager.xml:35(para)
 msgid ""
 "DOCUMENT IS PROVIDED ON AN \"AS IS\" BASIS, WITHOUT WARRANTY OF ANY KIND, "
 "EITHER EXPRESSED OR IMPLIED, INCLUDING, WITHOUT LIMITATION, WARRANTIES THAT "
 "THE DOCUMENT OR MODIFIED VERSION OF THE DOCUMENT IS FREE OF DEFECTS "
-"MERCHANTABLE, FIT FOR A PARTICULAR PURPOSE OR NON-INFRINGING. THE ENTIRE "
-"RISK AS TO THE QUALITY, ACCURACY, AND PERFORMANCE OF THE DOCUMENT OR "
-"MODIFIED VERSION OF THE DOCUMENT IS WITH YOU. SHOULD ANY DOCUMENT OR "
-"MODIFIED VERSION PROVE DEFECTIVE IN ANY RESPECT, YOU (NOT THE INITIAL "
-"WRITER, AUTHOR OR ANY CONTRIBUTOR) ASSUME THE COST OF ANY NECESSARY "
-"SERVICING, REPAIR OR CORRECTION. THIS DISCLAIMER OF WARRANTY CONSTITUTES AN "
-"ESSENTIAL PART OF THIS LICENSE. NO USE OF ANY DOCUMENT OR MODIFIED VERSION "
-"OF THE DOCUMENT IS AUTHORIZED HEREUNDER EXCEPT UNDER THIS DISCLAIMER; AND"
+"MERCHANTABLE, FIT FOR A PARTICULAR PURPOSE OR NON-INFRINGING. THE ENTIRE RISK "
+"AS TO THE QUALITY, ACCURACY, AND PERFORMANCE OF THE DOCUMENT OR MODIFIED "
+"VERSION OF THE DOCUMENT IS WITH YOU. SHOULD ANY DOCUMENT OR MODIFIED VERSION "
+"PROVE DEFECTIVE IN ANY RESPECT, YOU (NOT THE INITIAL WRITER, AUTHOR OR ANY "
+"CONTRIBUTOR) ASSUME THE COST OF ANY NECESSARY SERVICING, REPAIR OR "
+"CORRECTION. THIS DISCLAIMER OF WARRANTY CONSTITUTES AN ESSENTIAL PART OF THIS "
+"LICENSE. NO USE OF ANY DOCUMENT OR MODIFIED VERSION OF THE DOCUMENT IS "
+"AUTHORIZED HEREUNDER EXCEPT UNDER THIS DISCLAIMER; AND"
 msgstr ""
 "DAS DOKUMENT WIRD »WIE VORLIEGEND« GELIEFERT, OHNE JEGLICHE GEWÄHRLEISTUNG, "
 "WEDER AUSDRÜCKLICH NOCH STILLSCHWEIGEND, EINSCHLIESSLICH, ABER NICHT "
 "BESCHRÄNKT AUF, GEWÄHRLEISTUNGEN, DASS DAS DOKUMENT ODER EINE MODIFIZIERTE "
 "VERSION DES DOKUMENTS FREI VON HANDELSÜBLICHEN FEHLERN UND FÜR EINEN "
 "BESTIMMTEN ZWECK GEEIGNET IST UND KEINE RECHTE DRITTER VERLETZT. JEGLICHES "
-"RISIKO IN BEZUG AUF DIE QUALITÄT, GENAUIGKEIT UND LEISTUNG DES DOKUMENTS "
-"ODER EINER MODIFIZIERTEN VERSION DES DOKUMENTS TRAGEN SIE. SOLLTE SICH EIN "
+"RISIKO IN BEZUG AUF DIE QUALITÄT, GENAUIGKEIT UND LEISTUNG DES DOKUMENTS ODER "
+"EINER MODIFIZIERTEN VERSION DES DOKUMENTS TRAGEN SIE. SOLLTE SICH EIN "
 "DOKUMENT ODER EINE MODIFIZIERTE VERSION DAVON IN IRGENDEINER WEISE ALS "
 "FEHLERHAFT ERWEISEN, TRAGEN SIE (NICHT DER URSPRÜNGLICHE VERFASSER, AUTOR "
 "ODER EIN MITWIRKENDER) DIE KOSTEN FÜR JEGLICHE ERFORDERLICHE SERVICE-, "
-"REPARATUR- UND KORREKTURMASSNAHMEN: DIESE BESCHRÄNKUNG DER GEWÄHRLEISTUNG "
-"IST WESENTLICHER BESTANDTEIL DIESER LIZENZ. JEDE VERWENDUNG EINES DOKUMENTS "
-"ODER EINER MODIFIZIERTEN VERSION DES DOKUMENTS UNTERLIEGT DIESER "
-"BESCHRÄNKUNG; UND"
+"REPARATUR- UND KORREKTURMASSNAHMEN: DIESE BESCHRÄNKUNG DER GEWÄHRLEISTUNG IST "
+"WESENTLICHER BESTANDTEIL DIESER LIZENZ. JEDE VERWENDUNG EINES DOKUMENTS ODER "
+"EINER MODIFIZIERTEN VERSION DES DOKUMENTS UNTERLIEGT DIESER BESCHRÄNKUNG; UND"
 
 #: C/gnome-color-manager.xml:55(para)
 msgid ""
 "UNDER NO CIRCUMSTANCES AND UNDER NO LEGAL THEORY, WHETHER IN TORT (INCLUDING "
 "NEGLIGENCE), CONTRACT, OR OTHERWISE, SHALL THE AUTHOR, INITIAL WRITER, ANY "
 "CONTRIBUTOR, OR ANY DISTRIBUTOR OF THE DOCUMENT OR MODIFIED VERSION OF THE "
-"DOCUMENT, OR ANY SUPPLIER OF ANY OF SUCH PARTIES, BE LIABLE TO ANY PERSON "
-"FOR ANY DIRECT, INDIRECT, SPECIAL, INCIDENTAL, OR CONSEQUENTIAL DAMAGES OF "
-"ANY CHARACTER INCLUDING, WITHOUT LIMITATION, DAMAGES FOR LOSS OF GOODWILL, "
-"WORK STOPPAGE, COMPUTER FAILURE OR MALFUNCTION, OR ANY AND ALL OTHER DAMAGES "
-"OR LOSSES ARISING OUT OF OR RELATING TO USE OF THE DOCUMENT AND MODIFIED "
+"DOCUMENT, OR ANY SUPPLIER OF ANY OF SUCH PARTIES, BE LIABLE TO ANY PERSON FOR "
+"ANY DIRECT, INDIRECT, SPECIAL, INCIDENTAL, OR CONSEQUENTIAL DAMAGES OF ANY "
+"CHARACTER INCLUDING, WITHOUT LIMITATION, DAMAGES FOR LOSS OF GOODWILL, WORK "
+"STOPPAGE, COMPUTER FAILURE OR MALFUNCTION, OR ANY AND ALL OTHER DAMAGES OR "
+"LOSSES ARISING OUT OF OR RELATING TO USE OF THE DOCUMENT AND MODIFIED "
 "VERSIONS OF THE DOCUMENT, EVEN IF SUCH PARTY SHALL HAVE BEEN INFORMED OF THE "
 "POSSIBILITY OF SUCH DAMAGES."
 msgstr ""
 "UNTER KEINEN UMSTÄNDEN UND GEMÄSS KEINER RECHTSLEHRE, WEDER AUFGRUND VON "
 "UNERLAUBTEN HANDLUNGEN (EINSCHLIESSLICH FAHRLÄSSIGKEIT), VERTRÄGEN ODER "
-"SONSTIGEM, KANN DER AUTOR, DER URSPRÜNGLICHE VERFASSER, EIN MITWIRKENDER "
-"ODER EIN VERTEILER DES DOKUMENTS ODER EINER MODIFIZIERTEN VERSION DES "
-"DOKUMENTS ODER EIN LIEFERANT EINER DIESER PARTEIEN VON EINER PERSON FÜR "
-"DIREKTE, INDIREKTE, BESONDERE, ZUFÄLLIGE ODER ALS FOLGE AUFGETRETENE SCHÄDEN "
+"SONSTIGEM, KANN DER AUTOR, DER URSPRÜNGLICHE VERFASSER, EIN MITWIRKENDER ODER "
+"EIN VERTEILER DES DOKUMENTS ODER EINER MODIFIZIERTEN VERSION DES DOKUMENTS "
+"ODER EIN LIEFERANT EINER DIESER PARTEIEN VON EINER PERSON FÜR DIREKTE, "
+"INDIREKTE, BESONDERE, ZUFÄLLIGE ODER ALS FOLGE AUFGETRETENE SCHÄDEN "
 "IRGENDEINER ART, EINSCHLIESSLICH, ABER NICHT BESCHRÄNKT AUF, SCHÄDEN DURCH "
 "GESCHÄFTSWERTVERLUSTE, ARBEITSAUSFÄLLE, COMPUTERAUSFÄLLE ODER "
-"FUNKTIONSSTÖRUNGEN ODER JEGLICHE ANDERE SCHÄDEN ODER VERLUSTE, DIE DURCH "
-"ODER IM ZUSAMMENHANG MIT DER VERWENDUNG DES DOKUMENTS ODER EINER "
-"MODIFIZIERTEN VERSION DES DOKUMENTS ENTSTANDEN SIND, SELBST WENN DIESE "
-"PARTEI ÜBER MÖGLICHE SCHÄDEN INFORMIERT WORDEN SEIN SOLLTE, HAFTBAR GEMACHT "
-"WERDEN."
+"FUNKTIONSSTÖRUNGEN ODER JEGLICHE ANDERE SCHÄDEN ODER VERLUSTE, DIE DURCH ODER "
+"IM ZUSAMMENHANG MIT DER VERWENDUNG DES DOKUMENTS ODER EINER MODIFIZIERTEN "
+"VERSION DES DOKUMENTS ENTSTANDEN SIND, SELBST WENN DIESE PARTEI ÜBER MÖGLICHE "
+"SCHÄDEN INFORMIERT WORDEN SEIN SOLLTE, HAFTBAR GEMACHT WERDEN."
 
 #: C/gnome-color-manager.xml:28(para)
 msgid ""
@@ -184,8 +188,8 @@ msgid ""
 "<placeholder-1/>"
 msgstr ""
 "DAS DOKUMENT UND MODIFIZIERTE VERSIONEN DES DOKUMENTS WERDEN GEMÄSS DEN "
-"BEDINGUNGEN DER GNU FREE DOCUMENTATION LICENSE MIT DER FOLGENDEN "
-"VEREINBARUNG BEREITGESTELLT: <placeholder-1/>"
+"BEDINGUNGEN DER GNU FREE DOCUMENTATION LICENSE MIT DER FOLGENDEN VEREINBARUNG "
+"BEREITGESTELLT: <placeholder-1/>"
 
 #: C/gnome-color-manager.xml:60(firstname)
 msgid "Richard"
@@ -347,44 +351,57 @@ msgid "This allows you to adjust a calibrated or generated profile."
 msgstr "Ermöglicht die Anpassung eines kalibrierten oder erstellten Profils."
 
 #: C/gnome-color-manager.xml:226(title)
+msgid "Profile viewer"
+msgstr "Profilbetrachter"
+
+#: C/gnome-color-manager.xml:228(title)
+#| msgid "GNOME Color Manager basic tab"
+msgid "GNOME Color Manager profiles tab"
+msgstr "Karteireiter »Profile« der GNOME Farbverwaltung"
+
+#: C/gnome-color-manager.xml:237(para)
+#| msgid "This allows you to adjust a calibrated or generated profile."
+msgid "This allows you to view details about installed profiles."
+msgstr "Ermöglicht die Anzeige von Details über installierte Profile."
+
+#: C/gnome-color-manager.xml:243(title)
 msgid "Calibration"
 msgstr "Kalibrierung"
 
-#: C/gnome-color-manager.xml:227(para)
+#: C/gnome-color-manager.xml:244(para)
 msgid ""
-"<application>GNOME Color Manager</application> can generate ICC profiles "
-"with supported hardware colorimeter devices."
+"<application>GNOME Color Manager</application> can generate ICC profiles with "
+"supported hardware colorimeter devices."
 msgstr ""
 "Die <application>Farbverwaltung</application> kann ICC-Profile mit Hilfe von "
 "unterstützten Colorimetern erstellen."
 
-#: C/gnome-color-manager.xml:233(title)
+#: C/gnome-color-manager.xml:250(title)
 msgid "The first stage of calibration, which takes a few minutes."
 msgstr "Die erste Phase der Kalibrierung, die wenige Minuten dauert."
 
-#: C/gnome-color-manager.xml:245(title)
+#: C/gnome-color-manager.xml:262(title)
 msgid "The final stage of calibration, which can take over 15 minutes."
-msgstr ""
-"Die letzte Phase der Kalibrierung, die mehr als 15 Minuten dauern kann."
+msgstr "Die letzte Phase der Kalibrierung, die mehr als 15 Minuten dauern kann."
 
-#: C/gnome-color-manager.xml:260(title)
+#: C/gnome-color-manager.xml:277(title)
 msgid "About"
 msgstr "Über die Farbverwaltung"
 
-#: C/gnome-color-manager.xml:261(para)
+#: C/gnome-color-manager.xml:278(para)
 msgid ""
-"GNOME Color Manager was written by Richard Hughes <email>richard@hughsie."
-"com</email>. To find more information about GNOME Color Manager, please "
-"visit the <ulink url=\"http://projects.gnome.org/gnome-color-manager/\" type="
-"\"http\"><application>GNOME Color Manager</application> web page</ulink>."
+"GNOME Color Manager was written by Richard Hughes <email>richard@hughsie.com</"
+"email>. To find more information about GNOME Color Manager, please visit the "
+"<ulink url=\"http://projects.gnome.org/gnome-color-manager/\" type=\"http"
+"\"><application>GNOME Color Manager</application> web page</ulink>."
 msgstr ""
-"Die GNOME-Farbverwaltung wurde von Richard Hughes <email>richard@hughsie."
-"com</email> geschrieben. Besuchen Sie die Webseite der <ulink url=\"http://"
+"Die GNOME-Farbverwaltung wurde von Richard Hughes <email>richard@hughsie.com</"
+"email> geschrieben. Besuchen Sie die Webseite der <ulink url=\"http://"
 "projects.gnome.org/gnome-color-manager/\" type=\"http\"><application>GNOME-"
 "Farbverwaltung</application></ulink>, um mehr über die GNOME-Farbverwaltung "
 "zu erfahren."
 
-#: C/gnome-color-manager.xml:267(para)
+#: C/gnome-color-manager.xml:284(para)
 msgid ""
 "To report a bug or make a suggestion regarding this application or this "
 "manual, follow the directions at the <ulink url=\"http://projects.gnome.org/"
@@ -397,14 +414,13 @@ msgstr ""
 "\"http\">Kontaktseite der <application>GNOME Farbverwaltung</application></"
 "ulink>."
 
-#: C/gnome-color-manager.xml:273(para)
+#: C/gnome-color-manager.xml:290(para)
 msgid ""
-"This program is distributed under the terms of the GNU General Public "
-"license as published by the Free Software Foundation; either version 2 of "
-"the License, or (at your option) any later version. A copy of this license "
-"can be found at this <ulink url=\"gnome-color-manager:gpl\" type=\"help"
-"\">link</ulink>, or in the file COPYING included with the source code of "
-"this program."
+"This program is distributed under the terms of the GNU General Public license "
+"as published by the Free Software Foundation; either version 2 of the "
+"License, or (at your option) any later version. A copy of this license can be "
+"found at this <ulink url=\"gnome-color-manager:gpl\" type=\"help\">link</"
+"ulink>, or in the file COPYING included with the source code of this program."
 msgstr ""
 "Dieses Programm ist freie Software, Sie können sie weitergeben und/oder "
 "verändern, solange Sie sich an die Regeln der GNU General Public License "
@@ -417,4 +433,6 @@ msgstr ""
 #. Put one translator per line, in the form of NAME <EMAIL>, YEAR1, YEAR2
 #: C/gnome-color-manager.xml:0(None)
 msgid "translator-credits"
-msgstr "Christian Kirbach <Christian.Kirbach@googlemail.com>, 2009"
+msgstr ""
+"Christian Kirbach <Christian.Kirbach@googlemail.com>, 2009\n"
+"Mario Blättermann <mariobl@gnome.org>, 2010"
